Bugfix: The `VoteOverview` no longer overflows and covers the `VoteOptions` component. This instead now uses a scrollbar.

--- a/planning_poker/static/planning_poker/css/poker.css
+++ b/planning_poker/static/planning_poker/css/poker.css
@@ -190,6 +190,7 @@ nav .participants-list .participants-tooltip ul li span.muted {
 
 .votes-overview {
     grid-column: 1 / 3;
+    overflow-y: scroll;
 }
 
 .votes-overview .vote {
